Поправил настройку сервера по умолчанию

--- a/servermap.yaml
+++ b/servermap.yaml
@@ -1,4 +1,4 @@
-# Маппинг серверов и соответствующих им терминалов
+# Маппинг серверов и соответствующих им устройств
 MAP: {
   127.0.0.1: {
     8888: [terminal_0, terminal_1, terminal_2, terminal_3, terminal_4],
@@ -9,8 +9,8 @@ MAP: {
 
 # Сервер и порт по-умолчанию, куда будут направлены запросы,
 # когда не найден адрес в маппинге.
-DEFAULT: {
-  SERVER: 127.0.0.1,
+DEFAULT_SERVER: {
+  HOST: 127.0.0.1,
   PORT: 8080
 }
 
