--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
 # Маппинг серверов и соответствующих им устройств
 MAP: {
   127.0.0.1: {
-    8888: [terminal_0, terminal_1, terminal_2, terminal_3, terminal_4],
-    9999: [terminal_5, terminal_6, terminal_7]
+    8888: [terminal_0],
+    9999: [terminal_1],
   }
 }
 
