Оптимизировал поиск целевого сервера, сделав диапазонное задание идентификаторов устройства

--- a/config.yaml
+++ b/config.yaml
@@ -1,18 +1,12 @@
 # Маппинг серверов и соответствующих им устройств
 MAP: {
-  127.0.0.1: {
-    8888: [terminal_0],
-    9999: [terminal_1],
-  }
+  1-10 : "127.0.0.1:8888",
+  11-20 : "127.0.0.1:9999"
 }
 
-
-# Сервер и порт по-умолчанию, куда будут направлены запросы,
+# Сервер по-умолчанию, куда будут направлены запросы,
 # когда не найден адрес в маппинге.
-DEFAULT_SERVER: {
-  HOST: 127.0.0.1,
-  PORT: 8080
-}
+DEFAULT_SERVER: "127.0.0.1:8080"
 
 
 # Задержка ответа на запрос(в секундах)
