Выделил фабрики для устройств и прокси-инстанса, поправил настройку маршрутизации

--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,13 @@
 # Маппинг серверов и соответствующих им устройств
 MAP: {
-  1-10 : "127.0.0.1:8888",
-  11-20 : "127.0.0.1:9999"
+  0-2 : "127.0.0.1:8080",     # Staging
+  3-10 : "127.0.0.1:8090",    # Production-Like
+  11-150 : "127.0.0.1:9000",  # Production
 }
 
 # Сервер по-умолчанию, куда будут направлены запросы,
 # когда не найден адрес в маппинге.
-DEFAULT_SERVER: "127.0.0.1:8080"
+DEFAULT_SERVER: "127.0.0.1:8010"
 
 
 # Задержка ответа на запрос(в секундах)
