Исправил структуру задания схемы перенаправлений и поправил объект для определения перенаправления для устройства

--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,11 @@
-# Маппинг серверов и соответствующих им устройств
+# Маппинг серверов и соответствующих им устройств,
+# ключами являются хост и порт сервера, а значениями диапазон номеров устройств
 MAP: {
-  0-2 : "127.0.0.1:8080",     # Staging
-  3-10 : "127.0.0.1:8090",    # Production-Like
-  11-150 : "127.0.0.1:9000",  # Production
+  127.0.0.1: {
+    8080: 0-2,     # Staging
+    8090: 3-10,    # Production-like
+    9000: 11-150,  # Production
+  }
 }
 
 # Сервер по-умолчанию, куда будут направлены запросы,
