Поправлены комментарии в файле настроек

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
-# Маппинг серверов и соответствующих им устройств,
-# ключами являются хост и порт сервера, а значениями диапазон номеров устройств
+# Маппинг перенаправлений запросов на серверы с соответствующих им устройств,
+# ключами являются хост и порт сервера, а значениями диапазон номеров устройств.
 MAP: {
   127.0.0.1: {
     8080: 0-2,     # Staging
@@ -9,7 +9,7 @@ MAP: {
 }
 
 # Сервер по-умолчанию, куда будут направлены запросы,
-# когда не найден адрес в маппинге.
+# когда не найден адрес в маппинге перенаправлений.
 DEFAULT_SERVER: "127.0.0.1:8010"
 
 
